[gd_scene load_steps=19 format=2]

[ext_resource path="res://OptionButton2.gd" type="Script" id=1]
[ext_resource path="res://OptionButton.gd" type="Script" id=2]
[ext_resource path="res://OptionButton3.gd" type="Script" id=3]
[ext_resource path="res://OptionButton4.gd" type="Script" id=4]
[ext_resource path="res://OptionButton5.gd" type="Script" id=5]
[ext_resource path="res://OptionButton6.gd" type="Script" id=6]
[ext_resource path="res://Button.gd" type="Script" id=7]
[ext_resource path="res://OptionButton7.gd" type="Script" id=8]
[ext_resource path="res://OptionButton8.gd" type="Script" id=9]
[ext_resource path="res://OptionButton9.gd" type="Script" id=10]
[ext_resource path="res://OptionButton10.gd" type="Script" id=11]
[ext_resource path="res://OptionButton11.gd" type="Script" id=12]
[ext_resource path="res://OptionButton12.gd" type="Script" id=13]
[ext_resource path="res://OptionButton13.gd" type="Script" id=14]
[ext_resource path="res://OptionButton14.gd" type="Script" id=15]
[ext_resource path="res://OptionButton15.gd" type="Script" id=16]
[ext_resource path="res://OptionButton16.gd" type="Script" id=17]
[ext_resource path="res://Button2.gd" type="Script" id=18]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 129.0
margin_bottom = 120.0
text = "Item 0"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton2" type="OptionButton" parent="."]
margin_left = 100.0
margin_top = 200.0
margin_right = 129.0
margin_bottom = 220.0
script = ExtResource( 1 )

[node name="OptionButton3" type="OptionButton" parent="."]
margin_left = 100.0
margin_top = 300.0
margin_right = 129.0
margin_bottom = 320.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton14" type="OptionButton" parent="."]
margin_left = 100.0
margin_top = 400.0
margin_right = 129.0
margin_bottom = 420.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton9" type="OptionButton" parent="."]
margin_left = 500.0
margin_top = 100.0
margin_right = 529.0
margin_bottom = 120.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton15" type="OptionButton" parent="."]
margin_left = 700.0
margin_top = 100.0
margin_right = 729.0
margin_bottom = 120.0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton16" type="OptionButton" parent="."]
margin_left = 700.0
margin_top = 200.0
margin_right = 729.0
margin_bottom = 220.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton17" type="LineEdit" parent="."]
margin_left = 700.0
margin_top = 300.0
margin_right = 729.0
margin_bottom = 320.0

[node name="OptionButton18" type="LineEdit" parent="."]
margin_left = 700.0
margin_top = 400.0
margin_right = 758.0
margin_bottom = 424.0

[node name="OptionButton4" type="OptionButton" parent="."]
margin_left = 300.0
margin_top = 100.0
margin_right = 329.0
margin_bottom = 120.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton5" type="OptionButton" parent="."]
margin_left = 300.0
margin_top = 200.0
margin_right = 329.0
margin_bottom = 220.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton10" type="OptionButton" parent="."]
margin_left = 500.0
margin_top = 200.0
margin_right = 529.0
margin_bottom = 220.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton11" type="OptionButton" parent="."]
margin_left = 500.0
margin_top = 300.0
margin_right = 529.0
margin_bottom = 320.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton12" type="OptionButton" parent="."]
margin_left = 500.0
margin_top = 400.0
margin_right = 529.0
margin_bottom = 420.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton13" type="OptionButton" parent="."]
margin_left = 500.0
margin_top = 500.0
margin_right = 529.0
margin_bottom = 520.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton6" type="OptionButton" parent="."]
margin_left = 300.0
margin_top = 300.0
margin_right = 329.0
margin_bottom = 320.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 65.0
margin_right = 200.0
margin_bottom = 80.0
text = "Max Speed"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 165.0
margin_right = 200.0
margin_bottom = 180.0
text = "Acceleration"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 265.0
margin_right = 200.0
margin_bottom = 280.0
text = "nBack"

[node name="RichTextLabel14" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 365.0
margin_right = 200.0
margin_bottom = 380.0
text = "Response Limit"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 300.0
margin_top = 65.0
margin_right = 400.0
margin_bottom = 80.0
text = "Starting Fuel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel9" type="RichTextLabel" parent="."]
margin_left = 500.0
margin_top = 65.0
margin_right = 620.0
margin_bottom = 80.0
text = "Stimulus Duration"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel15" type="RichTextLabel" parent="."]
margin_left = 700.0
margin_top = 65.0
margin_right = 820.0
margin_bottom = 80.0
text = "Shift Centre Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel16" type="RichTextLabel" parent="."]
margin_left = 700.0
margin_top = 165.0
margin_right = 850.0
margin_bottom = 180.0
text = "Symbol Complexity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel17" type="RichTextLabel" parent="."]
margin_left = 700.0
margin_top = 265.0
margin_right = 900.0
margin_bottom = 280.0
text = "Data URL - https://abc.edu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel18" type="RichTextLabel" parent="."]
margin_left = 700.0
margin_top = 365.0
margin_right = 900.0
margin_bottom = 380.0
text = "Endpoint - /X1/Y2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
margin_left = 300.0
margin_top = 165.0
margin_right = 400.0
margin_bottom = 180.0
text = "Bonus Fuel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel10" type="RichTextLabel" parent="."]
margin_left = 500.0
margin_top = 165.0
margin_right = 600.0
margin_bottom = 180.0
text = "Shift IntraD N"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel11" type="RichTextLabel" parent="."]
margin_left = 500.0
margin_top = 265.0
margin_right = 600.0
margin_bottom = 280.0
text = "Shift ExtraD N"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel12" type="RichTextLabel" parent="."]
margin_left = 500.0
margin_top = 365.0
margin_right = 600.0
margin_bottom = 380.0
text = "Penalty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel13" type="RichTextLabel" parent="."]
margin_left = 500.0
margin_top = 465.0
margin_right = 600.0
margin_bottom = 480.0
text = "Flanker N"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
margin_left = 300.0
margin_top = 265.0
margin_right = 410.0
margin_bottom = 280.0
text = "Stimulus Interval"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 100.0
margin_top = 500.0
margin_right = 192.0
margin_bottom = 520.0
text = "START GAME"
script = ExtResource( 7 )

[node name="Button2" type="Button" parent="."]
margin_left = 700.0
margin_top = 500.0
margin_right = 792.0
margin_bottom = 520.0
text = "POST DATA"
script = ExtResource( 18 )

[node name="RichTextLabel7" type="RichTextLabel" parent="."]
margin_left = 300.0
margin_top = 365.0
margin_right = 400.0
margin_bottom = 380.0
text = "Time Limit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel8" type="RichTextLabel" parent="."]
margin_left = 300.0
margin_top = 465.0
margin_right = 400.0
margin_bottom = 480.0
text = "2nd Task"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton7" type="OptionButton" parent="."]
margin_left = 300.0
margin_top = 400.0
margin_right = 329.0
margin_bottom = 420.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton8" type="OptionButton" parent="."]
margin_left = 300.0
margin_top = 500.0
margin_right = 329.0
margin_bottom = 520.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="Button2" method="_on_Button2_pressed"]
